// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapsible rendering renders expected elements 1`] = `
<div
  className="Collapsible TestClass"
  id="test"
>
  <button
    aria-controls="test-content"
    aria-expanded={true}
    className="Collapsible__header"
    id="test-header"
    type="button"
  >
    cloneWithClassName
    <SvgIcon
      className="Collapsible__arrow Collapsible__arrow--open"
      icon={
        Object {
          "icon": Array [],
          "iconName": "angle-down",
          "prefix": "fas",
        }
      }
    />
  </button>
  <div
    aria-labelledby="test-header"
    className="addClassName"
    id="test-content"
    role="region"
  />
</div>
`;

exports[`Collapsible rendering renders expected elements when className is set 1`] = `
<div
  className="Collapsible TestClass"
  id="test"
>
  <button
    aria-controls="test-content"
    aria-expanded={true}
    className="Collapsible__header"
    id="test-header"
    type="button"
  >
    cloneWithClassName
    <SvgIcon
      className="Collapsible__arrow Collapsible__arrow--open"
      icon={
        Object {
          "icon": Array [],
          "iconName": "angle-down",
          "prefix": "fas",
        }
      }
    />
  </button>
  <div
    aria-labelledby="test-header"
    className="addClassName"
    id="test-content"
    role="region"
  />
</div>
`;

exports[`Collapsible rendering sets a random id if not provided 1`] = `
<div
  className="Collapsible"
  id="e1"
>
  <button
    aria-controls="e1-content"
    aria-expanded={false}
    className="Collapsible__header"
    id="e1-header"
    type="button"
  >
    cloneWithClassName
    <SvgIcon
      className="Collapsible__arrow"
      icon={
        Object {
          "icon": Array [],
          "iconName": "angle-down",
          "prefix": "fas",
        }
      }
    />
  </button>
  <div
    aria-labelledby="e1-header"
    className="addClassName"
    id="e1-content"
    role="region"
  />
</div>
`;
